syntax = "proto3";

import "google/protobuf/timestamp.proto";

package analytics;

option go_package = "./;analyticspb";

service AnalyticsService {
  rpc GetStatsByURL(GetStatsRequest) returns (GetStatsResponse);
  rpc UpdateStatsByURL(UpdateStatsRequest) returns (UpdateStatsResponse);
}

message GetStatsRequest {
  string short_url = 1;
}

message GetStatsResponse {
  int64 usage_count = 1;
  google.protobuf.Timestamp last_usage = 2;
}

message UpdateStatsRequest {
  string short_url = 1;
}

message UpdateStatsResponse {
  bool success = 1;
}